Language background highlight and errors checker

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             </div>
             <div class="col-xs-6 text-center">
                 <select class="form-control input-sm" id="select-lang">
-                    <option value="en">English</option>
-                    <option value="th" selected>Thai</option>
+                    <option value="en" style="background-color:#ffaa99;">English</option>
+                    <option value="th" style="background-color:#99ffaa;" selected>Thai</option>
                 </select>
             </div>
             <div class="col-xs-4 text-center">
