--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="col-xs-8 text-right"></div>
             <div class="col-xs-4 text-right">
                 Only changes after: <input type="date" id="changes-after-date" />
+                <span id="date-filtered-count"></span>
                 &nbsp;&nbsp;&nbsp;
                 <a href="#" onclick="oLE.expand(); return false;">Expand All</a> 
                 &nbsp;&nbsp;&nbsp;
