--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     <script src="locales-changes.js"></script>
 </head>
 <body>
+    <div style="position: fixed; height: 40px; line-height: 30px; bottom: 0px; background-color: white; padding: 5px; width: 100%; border-top: 1px solid #aaa; z-index: 1000;">
+        Time left: <span id="timer">30:00</span>
+    </div>
     <div style="width:97%; margin-left: auto; margin-right: auto;">
         <div class="row some-tools">
-            <div class="col-xs-8 text-right"></div>
+            <div class="col-xs-8 text-left">
+            </div>
             <div class="col-xs-4 text-right">
                 Only changes after: <input type="date" id="changes-after-date" />
                 <span id="date-filtered-count"></span>
